# Simpify-AI-Group-Project

./: .env_example  .gitignore  .gitignore copy  LICENSE  README.md  __init__.py  pyproject.toml
src/: __init__.py
src/sai_content_curation_crew/: README.md  crew.py  run_crew.py
src/sai_content_curation_crew/config/: agents.yaml  tasks.yaml
