[tool.poetry]
name = "simplify_ai_group_project"
version = "0.1.0"
description = "Learning to use crewAI"
authors = ["Zigg Kaizen <hello@ziggkaizen.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {git = "https://github.com/AgentOps-AI/crewAI.git", rev = "main"}
langchain-groq = "^0.1.3"
browserbase = "^0.0.9"
duckduckgo-search = "^5.3.0"
huggingface-hub = "^0.23.0"
langchain-google-genai = "^1.0.3"
ollama = "^0.1.9"
youtube-transcript-api = "^0.6.2"
youtube-search = "^2.1.2"
agentops = "^0.1.11"
mock = "^5.1.0"
langgraph = "0.0.15"

[tool.poetry.scripts]
sai_content_curation_crew = "sai_content_curation_crew.run_crew:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"